fix: Display App Version and System Information in About Page
Previously, the About page lacked information about the app version,
Node.js version, Electron version, and Chrome version.

This commit addresses the issue by updating the About page to show
the relevant version and system information. The implementation
utilizes Electron's preloader and IPC features.

--- a/style.css
+++ b/style.css
@@ -491,6 +491,12 @@ small a:hover {
     background-color: rgba(var(--pure-material-primary-rgb, 33, 150, 243), 0.6);
 }
 
+div.about-logo{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media (min-width: 768px) {
     .container {
         width: 720px
