--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     --scrollbar-background-track: none;
     --scrollbar-width-legacy: 5px;
     --form-field-error: #ac0002;
+    --text-color-hex: #000;
 }
 
 * {
@@ -127,6 +128,12 @@ p {
     letter-spacing: 0.1px;
 }
 
+.caption{
+    font-weight: 400;
+    font-size: 12px;
+    letter-spacing: 0.4px;
+}
+
 /* Add styles for the button */
 .cta-button {
     background-color: hsl(337, 84%, 75%);
@@ -187,6 +194,7 @@ small a:hover {
 }
 
 @keyframes pulse {
+
     0%,
     100% {
         transform: scale(1);
@@ -301,59 +309,80 @@ small a:hover {
 }
 
 /* Style for the drawer header */
-.drawer-header {
+.drawer .drawer-header {
     background-color: var(--accent-color-hex);
     color: white;
-    padding: 20px;
+    padding: 0 16px;
+    display: flex;
+    align-items: center;
+    height: 128px;
+}
+
+.drawer .drawer-header a {
+    color: white;
+    text-decoration: none;
+    margin-right: 16px;
+    display: inline-block;
+    padding: 0;
+}
+
+.drawer .drawer-header a:hover {
+    color: white;
+}
+
+.drawer .drawer-header .heading {
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+    vertical-align: text-bottom;
+    top: 42px;
+    position: absolute;
+    left: 64px;
+}
+
+/* Style for the app logo */
+.drawer .drawer-header .app-logo {
+    width: 24px;
+    height: 24px;
+}
+
+/* Style for the drawer menu (list of links) */
+.drawer .drawer-menu {
+    list-style: none;
+    padding: 0;
+    margin: 8px 16px;
+}
+
+.drawer .drawer-menu li {
+    padding: 8px 0;
+    height: 64px;
     display: flex;
     align-items: center;
 }
 
-.drawer-header a {
-    color: white;
-    text-decoration: none;
-}
-
-.drawer-header a:hover {
-    color: white;
-}
-
-/* Style for the app logo */
-.app-logo {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-}
-
-/* Style for the drawer menu (list of links) */
-.drawer-menu {
-    list-style: none;
+.drawer hr.separator {
+    border-top: 0.5px solid #e1e1e1;
+    margin: 8px 0;
+    height: 1px;
     padding: 0;
-    margin: 0;
-    margin-left: 16px;
 }
 
-.drawer-menu li {
-    padding: 8px;
-    border-bottom: 1px solid #ccc;
-}
-
-.drawer-menu li .icon {
+.drawer .drawer-menu li .icon {
     font-family: var(--app-emoji-font-family);
-    font-size: 16px;
+    font-size: 24px;
     display: inline-block;
 }
 
 /* Style for links in the drawer menu */
-.drawer-menu a {
+.drawer .drawer-menu a {
     text-decoration: none;
-    color: #000;
+    color: var(--text-color-hex);
     display: inline-block;
     margin-left: 16px;
 }
 
 /* Hover effect for links */
-.drawer-menu a:hover {
+.drawer .drawer-menu a:hover {
     color: var(--accent-color-hex);
 }
 
@@ -401,18 +430,41 @@ small a:hover {
 
 .social-icons {
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    flex-direction: column;
+    padding: 0;
+    margin: 8px 16px;
+}
+
+.social-icons .social-title{
+   margin: 8px 0 0 0;
 }
 
 .social-icons a {
     text-decoration: none;
-    color: #fff;
+    color: var(--text-color-hex);
+    display: flex;
+    align-items: center;
+    height: 64px;
+}
+
+.social-icons a span{
+    display: inline-block;
+    margin: 0 16px !important;
+    padding: 0;
+}
+
+.social-icons a img{
+    margin: 0;
+    padding: 0;
 }
 
 .social-icons a:visited {
     text-decoration: none;
-    color: #fff;
+    color: var(--text-color-hex);
+}
+
+.social-icons a:hover {
+    color: var(--accent-color-hex);
 }
 
 .toggle-switch {
@@ -424,7 +476,7 @@ small a:hover {
     line-height: 1.5;
 }
 
-.toggle-switch > input {
+.toggle-switch>input {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
@@ -445,13 +497,13 @@ small a:hover {
     transition: opacity 0.3s 0.1s, transform 0.2s 0.1s;
 }
 
-.toggle-switch > span {
+.toggle-switch>span {
     display: inline-block;
     width: 100%;
     cursor: pointer;
 }
 
-.toggle-switch > span::before {
+.toggle-switch>span::before {
     content: '';
     float: right;
     display: inline-block;
@@ -464,7 +516,7 @@ small a:hover {
     transition: background-color 0.2s, opacity 0.2s;
 }
 
-.toggle-switch > span::after {
+.toggle-switch>span::after {
     content: '';
     position: absolute;
     top: 2px;
@@ -478,64 +530,64 @@ small a:hover {
     transition: background-color 0.2s, transform 0.2s;
 }
 
-.toggle-switch > input:checked {
+.toggle-switch>input:checked {
     right: -10px;
     background-color: rgb(var(--accent-color-rgb-string, 33, 150, 243));
 }
 
-.toggle-switch > input:checked + span::before {
+.toggle-switch>input:checked+span::before {
     background-color: rgba(var(--accent-color-rgb-string, 33, 150, 243), 0.6);
 }
 
-.toggle-switch > input:checked + span::after {
+.toggle-switch>input:checked+span::after {
     background-color: rgb(var(--accent-color-rgb-string, 33, 150, 243));
     transform: translateX(16px);
 }
 
 /* Hover, Focus */
-.toggle-switch:hover > input {
+.toggle-switch:hover>input {
     opacity: 0.04;
 }
 
-.toggle-switch > input:focus {
+.toggle-switch>input:focus {
     opacity: 0.12;
 }
 
-.toggle-switch:hover > input:focus {
+.toggle-switch:hover>input:focus {
     opacity: 0.16;
 }
 
 /* Active */
-.toggle-switch > input:active {
+.toggle-switch>input:active {
     opacity: 1;
     transform: scale(0);
     transition: transform 0s, opacity 0s;
 }
 
-.toggle-switch > input:active + span::before {
+.toggle-switch>input:active+span::before {
     background-color: rgba(var(--pure-material-primary-rgb, 33, 150, 243), 0.6);
 }
 
-.toggle-switch > input:checked:active + span::before {
+.toggle-switch>input:checked:active+span::before {
     background-color: rgba(0, 0, 0, 0.38);
 }
 
 /* Disabled */
-.toggle-switch > input:disabled {
+.toggle-switch>input:disabled {
     opacity: 0;
 }
 
-.toggle-switch > input:disabled + span {
+.toggle-switch>input:disabled+span {
     color: rgb(0, 0, 0);
     opacity: 0.38;
     cursor: default;
 }
 
-.toggle-switch > input:disabled + span::before {
+.toggle-switch>input:disabled+span::before {
     background-color: rgba(0, 0, 0, 0.38);
 }
 
-.toggle-switch > input:checked:disabled + span::before {
+.toggle-switch>input:checked:disabled+span::before {
     background-color: rgba(var(--pure-material-primary-rgb, 33, 150, 243), 0.6);
 }
 
@@ -566,7 +618,7 @@ dialog.basic-dialog .dialog-content {
     font-size: 16px;
 }
 
-dialog.basic-dialog .dialog-content > * {
+dialog.basic-dialog .dialog-content>* {
     margin-bottom: 16px;
 }
 
@@ -591,7 +643,7 @@ dialog.basic-dialog .action-container {
     text-align: right;
 }
 
-dialog.basic-dialog .action-container > *:not(:last-child) {
+dialog.basic-dialog .action-container>*:not(:last-child) {
     margin-right: 8px;
 }
 
@@ -674,7 +726,7 @@ form .field input {
     height: 48px;
     padding-left: 16px !important;
     padding-right: 12px !important;
-    border: 1px solid #000;
+    border: 1px solid var(--text-color-hex);
     outline: none;
     appearance: none;
     line-height: 20px;
@@ -684,16 +736,16 @@ form .field input:focus {
     border-color: var(--accent-color-hex);
 }
 
-form .field input:focus + label {
+form .field input:focus+label {
     color: var(--accent-color-hex);
 }
 
-form .field input[type='text']:focus + label {
+form .field input[type='text']:focus+label {
     transform: translate3d(12px, -9px, 0);
     font-size: 12px;
 }
 
-form .field input[type='time'] + label {
+form .field input[type='time']+label {
     transform: translate3d(12px, -9px, 0) !important;
     font-size: 12px !important;
 }
@@ -713,15 +765,15 @@ form .field input.validation-error {
     border-color: var(--form-field-error) !important;
 }
 
-form .field input.validation-error:focus + label {
+form .field input.validation-error:focus+label {
     color: var(--form-field-error);
 }
 
-form .field input[type='time'].validation-error + label {
+form .field input[type='time'].validation-error+label {
     color: var(--form-field-error);
 }
 
-.field input[type='text']:not(:placeholder-shown) + label {
+.field input[type='text']:not(:placeholder-shown)+label {
     transform: translate3d(12px, -9px, 0) !important;
 }
 
