fix: Fixed emoji rendering issues
Previously emoji's were not rendered properly without native support

Inorder to overcome it, emojis have been rendered as fonts which will make them render in all devices correctly

--- a/style.css
+++ b/style.css
@@ -794,6 +794,9 @@ form .field input::placeholder {
 .d-none {
     display: none !important;
 }
+.d-inline {
+    display: inline !important;
+}
 
 @supports selector(::-webkit-scrollbar) {
     ::-webkit-scrollbar-thumb {
